# InteropUnityCUDA

./: .gitignore  LICENSE  Readme.md  citation.cff  diff.txt
InteropUnityCUDA/: .gitignore  UpgradeLog.htm  log.txt
InteropUnityCUDA/Assets/: PluginLoggerReader.cs
InteropUnityCUDA/Assets/Action/: ActionUnity.cs  ActionUnitySample.cs  ActionUnitySampleTexture.cs  InteropHandler.cs  InteropHandlerSample.cs
InteropUnityCUDA/Assets/Actions/: ActionUnity.cs  ActionUnitySampleBuffer.cs  ActionUnitySampleTexture.cs  ActionUnitySampleTextureArray.cs  InteropHandler.cs  InteropHandlerSample.cs
InteropUnityCUDA/Assets/Editor/: PackageGenerator.cs  PackageGeneratorEditor.cs  ProjectEnvironment.cs  StudioNyx.InteropUnityCUDA.Editor.asmdef
InteropUnityCUDA/Assets/Interoperability/: Action.cs  ActionTOTO.cs  InteroptGLCuda.cs  TestInteropGLCUDABuffer.cs  TestInteropGLCUDATexture.cs
InteropUnityCUDA/Assets/Plugin/: PluginInteropUnityCUDA.exp  PluginInteropUnityCUDA.lib  SampleBasic.exp  SampleBasic.lib  Utilities.exp  Utilities.lib
InteropUnityCUDA/Assets/Prefab/: Logger.prefab
InteropUnityCUDA/Assets/Resources/ComputeShaders/: TextureClearer.compute  TextureReaderWriter.compute
InteropUnityCUDA/Assets/Runtime/: InteropUnityCUDA.asmdef  StudioNyx.InteropUnityCUDA.asmdef
InteropUnityCUDA/Assets/Runtime/Actions/: ActionUnity.cs  ActionUnitySampleBuffer.cs  ActionUnitySampleStructBuffer.cs  ActionUnitySampleTexture.cs  ActionUnitySampleTextureArray.cs  InteropHandler.cs  InteropHandlerSample.cs
InteropUnityCUDA/Assets/Runtime/Plugin/: PluginInteropUnityCUDA.exp  PluginInteropUnityCUDA.lib  SampleBasic.exp  SampleBasic.lib  Utilities.exp  Utilities.lib
InteropUnityCUDA/Assets/Runtime/Scenes/: InteropSample.unity
InteropUnityCUDA/Assets/Runtime/Utilities/: ParticlesDrawer.cs  ParticlesDrawerMaterial.mat  (+1 more)
InteropUnityCUDA/Assets/Scenes/: InteropSample.unity  InteropUnityCUDA.unity  InteropUnityCUDABuffer.unity  InteropUnityCUDATexture.unity
InteropUnityCUDA/Assets/Scripts/: GPUUtilities.cs  MathUtilities.cs  PluginLoggerReader.cs  TestInteropGLCUDA.cs  TestInteropGLCUDABuffer.cs  TestInteropGLCUDATexture.cs  TextureReaderWriter.cs
InteropUnityCUDA/Assets/Tests/: StudioNyx.InteropUnityCUDA.Tests.asmdef  StudioNyx.InteropUnityCUDA.TestsInteropUnityCUDA.asmdef
InteropUnityCUDA/Assets/Utilities/: New Material.mat  ParticlesDrawer.cs  ParticlesDrawerShader.shader  PluginLoggerReader.cs
InteropUnityCUDA/ProjectSettings/: ProjectSettings.asset
Plugin/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  InteropUnityCUDA.sublime-project  InteropUnityCUDA.sublime-workspace  Plugin.sln  index.clang-format  premake5.lua
Plugin/Documentation/: .gitignore  CreateAction.md  Doxyfile  GenerateUnityPackage.md
Plugin/PluginInteropUnityCUDA/: CMakeLists.txt  PluginInteropUnityCUDA.vcxproj  PluginInteropUnityCUDA.vcxproj.filters
Plugin/PluginInteropUnityCUDA/include/: Action.h  ActionTOTO.h  ActionTOTO.hpp  action.h  cudaInclude.h  cuda_include.h  factory.h  openGLInclude.h  openGL_include.h  renderAPI.h  texture.h  unityPlugin.h  unity_plugin.h
Plugin/PluginInteropUnityCUDA/include/Buffer/: buffer.h  buffer_D3D11.h  buffer_OpenGLCoreES.h  vertexBuffer.h  vertexBuffer_OpenGLCoreES.h  vertex_buffer.h  vertex_buffer_D3D11.h  vertex_buffer_OpenGLCoreES.h
Plugin/PluginInteropUnityCUDA/include/RenderAPI/: renderAPI.h  renderAPI_D3D11.h  renderAPI_D3D12.h  renderAPI_OpenGLCoreES.h
Plugin/PluginInteropUnityCUDA/include/SurfaceWrapper/: surface_wrapper.h  surface_wrapper_D3D11.h  surface_wrapper_OpenGLCoreES.h  surface_wrapper_device_allocator.cuh
Plugin/PluginInteropUnityCUDA/include/Texture/: texture.h  texture_D3D11.h  texture_OpenGLCoreES.h
Plugin/PluginInteropUnityCUDA/src/: ActionTOTO.cpp  action.cpp  dllmain.cpp  factory.cpp  main.cu  renderAPI.cpp  renderAPI_D3D11.cpp  renderAPI_D3D12.cpp  renderAPI_OpenGLCoreES.cpp  texture.cpp  texture_OpenGLCoreES.cpp  unityPlugin.cpp  unity_plugin.cpp
Plugin/PluginInteropUnityCUDA/src/Buffer/: buffer.cpp  buffer_D3D11.cpp  buffer_OpenGLCoreES.cpp  vertexBuffer.cpp  vertexBuffer_OpenGLCoreES.cpp  vertex_buffer.cpp  vertex_buffer_D3D11.cpp  vertex_buffer_OpenGLCoreES.cpp
Plugin/PluginInteropUnityCUDA/src/RenderAPI/: renderAPI.cpp  renderAPI_D3D11.cpp  renderAPI_D3D12.cpp  renderAPI_OpenGLCoreES.cpp  renderAPI_Vulkan.cpp
Plugin/PluginInteropUnityCUDA/src/SurfaceWrapper/: surface_wrapper_device_allocator.cu
Plugin/PluginInteropUnityCUDA/src/Texture/: texture.cpp  texture_D3D11.cpp  texture_OpenGLCoreES.cpp
Plugin/SampleBasic/: CMakeLists.txt  SampleBasic.vcxproj  SampleBasic.vcxproj.filters  action.h
Plugin/SampleBasic/include/: actionSample.h  actionSampleTexture.h  actionSampleTextureArray.h  actionSampleVertexBuffer.h  action_sample_struct_buffer.h  action_sample_texture.h  action_sample_texture_array.h  action_sample_vertex_buffer.h  sample_kernels.cuh
Plugin/SampleBasic/src/: actionSample.cpp  actionSampleTexture.cpp  actionSampleTextureArray.cpp  actionSampleVertexBuffer.cpp  action_sample_struct_buffer.cpp  action_sample_texture.cpp  action_sample_texture_array.cpp  action_sample_vertex_buffer.cpp  main.cu  sample_kernels.cu
Plugin/Utilities/: CMakeLists.txt  Utilities.vcxproj  Utilities.vcxproj.filters
Plugin/Utilities/include/: cuda_include.h  framework.h  log.h
Plugin/Utilities/src/: dllmain.cpp  log.cpp
Plugin/UtilitiesCUDA/: UtilitiesCUDA.vcxproj  UtilitiesCUDA.vcxproj.filters
Plugin/UtilitiesCUDA/include/: frameworkUtilitiesCUDA.h  utilitiesCUDA.h
Plugin/UtilitiesCUDA/src/: dllmain.cpp  utilitiesCUDA.cpp
Plugin/buildtools/: .gitignore  clean.ps1  compileProjects.ps1  compileProjects.py  configureProjects.ps1  configureProjects.py  copyBuildToUnity.ps1  dependencies.ps1  launchUnity.ps1  launchUnity.py  packageUnity.ps1  packageUnity.py  runUnitTest.ps1  toolsInterop.py
Plugin/buildtools/Hook/: pre-push
Plugin/premake5-cuda/: cuda-exported-variables.lua  premake5-cuda-linux.lua  premake5-cuda-vs.lua  premake5-cuda.lua
com.studio-nyx.interop-unity-cuda.1.0.0/: package.json
(+13 files in other folders)
